--- a/css/style.css
+++ b/css/style.css
@@ -3211,6 +3211,10 @@ input[type=submit] {
     .site-nav-menu {
         top: 60px;
     }
+
+    .footer-contact_detail_section p span {
+        font-size: 4.5rem;
+    }
 }
 
 
