--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,7 +1,7 @@
-#menu {
+/* #menu {
     height: 45px;
     background: #0e66a1;
-}
+} */
 
 #menu ul,
 #menu li {
@@ -31,7 +31,9 @@
 
 #menu ul li:hover a {
     background: #eee;
-    color: #333 !important
+    color: #333 !important;
+    font-size: 4.5rem;
+    transition: all 0.5s;
 }
 
 #menu input {
@@ -44,15 +46,15 @@
     cursor: pointer
 }
 
-#menu label {
+/* #menu label {
     font: bold 30px Arial;
     display: none;
     width: 35px;
     height: 45px;
     line-height: 45px;
-    text-align: center;
+    text-align: left;
     color: #fff
-}
+} */
 
 /* #menu label span {
     position: absolute;
@@ -62,13 +64,18 @@
     font-size: 10rem;
 } */
 
-#menu label span {
+/* #menu label span {
     position: absolute;
     font-family: 'RageItalic';
     color: #fff;
     font-size: 7.5rem;
     transform: translate(200%, 0);
     left: 100%;
+} */
+
+
+#menu ul li a {
+    transition: all 0.5s;
 }
 
 #menu ul li ul {
@@ -87,8 +94,11 @@
     background: #ccc;
 }
 
+
 #menu a.prett {
-    padding: 0 27px 0 14px
+    padding: 0 27px 0 14px;
+    font-size: 4rem;
+    color: #0973ba;
 }
 
 #menu a.prett::after {
@@ -120,7 +130,7 @@
     background: #BABABA;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
     #menu {
         position: relative
     }
@@ -134,6 +144,15 @@
         z-index: 3;
         height: auto;
         display: block;
+    }
+
+    #menu li a:hover {
+        color: #0973ba;
+    }
+
+    #menu ul li a {
+        transition: all 0.5s;
+        font-size: 3.5rem;
     }
 
     #menu ul.menus {
@@ -151,7 +170,7 @@
 
     #menu li a {
         color: #000;
-        text-align: center;
+        /* text-align: center; */
     }
 
     #menu li a:hover {
@@ -167,6 +186,8 @@
     #menu a.prett:hover {
         background: #eee;
         color: #333;
+        font-size: 4rem;
+        transition: all 0.5s;
     }
 
     #menu ul.menus a {
@@ -192,6 +213,13 @@
     #menu ul li ul li a {
         width: 100%;
     }
+
+    #menu ul li:hover a {
+        background: #eee;
+        color: #333 !important;
+        font-size: 3.5rem;
+        transition: all 0.5s;
+    }
 }
 
 @media screen and (max-width: 425px) {
@@ -202,6 +230,20 @@
         font-size: 10rem;
         transform: translate(90%, 0);
         left: 100%;
+    }
+
+    #menu li:hover>a.prett,
+    #menu a.prett:hover {
+        background: #eee;
+        color: #333;
+        font-size: 6rem;
+        transition: all 0.5s;
+    }
+
+    #menu a.prett {
+        padding: 0 27px 0 14px;
+        font-size: 5rem;
+        color: #0973ba;
     }
 }
 
