--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ section#hero-section {
 }
 
 .productcardSection {
-    padding: 0;
+    padding: 0 0 15px 0;
     transition: all 0.8s;
 }
 
@@ -1027,7 +1027,13 @@ section#hero-section {
 
 .footer-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+.footer-section-top,
+.footer-section-bottom {
+    display: flex;
+    align-items: center;
 }
 
 .newsletterSection .footer-contact_detail_section {
@@ -1039,6 +1045,7 @@ section#hero-section {
 .footer-section .footer-contact_detail_section {
     display: flex;
     align-items: center;
+    padding: 0 50px;
 }
 
 .footer-contact_detail_section img {
@@ -1079,10 +1086,13 @@ section#hero-section {
     color: #0E66A1;
     font-family: Ubuntu, sans-serif;
     border: .1rem solid #0E66A1;
+    transition: all 0.5s;
 }
 
 .footerButton a:hover {
-    opacity: 0.7;
+    background-color: #ED2328;
+    color: #fff;
+    border-radius: 5px;
 }
 
 /* .locationsection {
@@ -1150,6 +1160,7 @@ input[type=submit] {
     font-family: sans-serif;
     font-style: normal;
     margin: 0 0.2rem;
+    cursor: pointer;
 }
 
 .newsletterSection input[type=submit]:hover {
@@ -1864,6 +1875,12 @@ input[type=submit] {
         font-size: 45%;
     }
 
+    .footer-section .footer-contact_detail_section {
+        display: flex;
+        align-items: center;
+        padding: 0 5px 0 0;
+    }
+
     .header-search {
         width: 35%;
     }
@@ -1994,12 +2011,20 @@ input[type=submit] {
         font-size: 4rem;
     }
 
+    .footer-section {
+        display: block;
+    }
+
     .site-nav-menu {
         top: 79px;
     }
 
     .header-search {
         width: 100%;
+    }
+
+    .newsletterSection .footer-contact_detail_section p:nth-child(1) {
+        font-size: 6.5rem;
     }
 
     .newsletterSection {
@@ -2180,7 +2205,11 @@ input[type=submit] {
     }
 
     .Slidertext a {
-        font-size: 3.3rem;
+        font-size: 4rem;
+    }
+
+    .icon-arrow-right-circle {
+        font-size: 3.5rem;
     }
 
     .bannerTextAtEnd {
@@ -2469,8 +2498,7 @@ input[type=submit] {
     .header-call p span a,
     .bannerHeading,
     .instore-text,
-    .product_section ul button,
-    .newsletterSection .footer-contact_detail_section p:nth-child(1) {
+    .product_section ul button {
         font-size: 4.5rem;
     }
 
@@ -2664,10 +2692,6 @@ input[type=submit] {
         max-width: 12%;
     }
 
-    .footer-section {
-        display: inline-block;
-    }
-
     .contact_detail_section {
         text-align: center;
     }
@@ -2691,6 +2715,18 @@ input[type=submit] {
         display: flex;
         align-items: center;
         /* justify-content: center; */
+    }
+
+    .footer-section-top,
+    .footer-section-bottom {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 8rem;
+    }
+
+    .paymentmethods ul li {
+        display: inline;
+        padding-right: 1.5rem;
     }
 
     .footerButton {
@@ -2720,20 +2756,24 @@ input[type=submit] {
     }
 
     .newsletterSection .footer-contact_detail_section p:nth-child(2) {
-        font-size: 2.5rem;
+        font-size: 3rem;
         padding: 0 0 10px 0;
         text-align: center;
+    }
+
+    .productcardSection {
+        padding: 0 0 25px 0;
     }
 
     .newsletterSection input[type=text],
     .newsletterSection input[type=email],
     input[type=submit] {
-        font-size: 3rem;
+        font-size: 3.2rem;
     }
 
     .newsletterSection .newsletterButton {
         font-size: 3rem;
-        padding: 1.7rem 6rem;
+        padding: 1.82rem 6rem;
     }
 
     .newsletterSection input[type=text] {
@@ -2979,10 +3019,6 @@ input[type=submit] {
     .banner-subheading2,
     .banner-subheading3 {
         font-size: 3.5rem;
-    }
-
-    .Slidertext a {
-        font-size: 3.3rem;
     }
 
     .bannerTextAtEnd {
@@ -3590,6 +3626,10 @@ input[type=submit] {
         bottom: 5.8rem;
         font-size: 2.3rem;
     }
+
+    .site-nav-menu {
+        top: 57px;
+    }
 }
 
 @media screen and (max-width: 425px) {
@@ -3599,6 +3639,22 @@ input[type=submit] {
 
     .header-search {
         width: 90%;
+    }
+
+    .footer-section-top,
+    .footer-section-bottom {
+        display: block;
+        justify-content: center;
+        /* padding: 0 8rem; */
+    }
+
+    .footer-section {
+        display: inline-block;
+    }
+
+    .product_section p {
+        padding: 3.5rem 0;
+        font-size: 11rem;
     }
 
     .sticky .headerContainer .logo img {
@@ -3618,7 +3674,7 @@ input[type=submit] {
     }
 
     .product_section ul {
-        padding: 0 15%;
+        padding: 0 25%;
     }
 
     .category-right {
@@ -3651,7 +3707,8 @@ input[type=submit] {
 
     .product_section ul button {
         font-size: 6.5rem;
-        border-bottom: 1px solid #000;
+        padding: 3px 0;
+        border-bottom: 2px solid #ed2328;
     }
 
     .bannerHeading {
@@ -3659,11 +3716,11 @@ input[type=submit] {
     }
 
     .bannerTextAtEnd {
-        right: 5.5rem;
+        right: 7.5rem;
     }
 
     .bannerTextAtStart {
-        left: 3.5rem;
+        left: 7.5rem;
     }
 
     .header-cart img {
@@ -3765,7 +3822,7 @@ input[type=submit] {
         background: none;
         /* background: linear-gradient(#d7d1d1, #0e66a1); */
         text-align: center;
-        padding: 0 0 4rem 0;
+        padding: 2rem 0 4rem 0;
         transform: translate(0, 0);
     }
 
@@ -3911,11 +3968,16 @@ input[type=submit] {
     }
 
     .card .card-heading h5 {
-        font-size: 4.5rem;
+        font-size: 5rem;
     }
 
     .price {
         font-size: 5.2rem;
+    }
+
+    .paymentmethods ul li {
+        display: inline;
+        padding-right: 2rem;
     }
 
     .price span {
@@ -3924,7 +3986,7 @@ input[type=submit] {
     }
 
     .mobile-nav i {
-        font-size: 5.5rem;
+        font-size: 6rem;
         transition: all 0.5s;
     }
 
@@ -4059,7 +4121,7 @@ input[type=submit] {
         background: none;
         /* background: linear-gradient(#1252af, #000000); */
         text-align: center;
-        padding: 0 0 4rem 0;
+        padding: 2rem 0 4rem 0;
         transform: translate(0, 0);
     }
 
@@ -4180,8 +4242,12 @@ input[type=submit] {
     }
 
     .bannerTextAtEnd {
-        right: 4.5rem;
-        top: 3rem;
+        right: 7.5rem;
+        top: 9rem;
+    }
+
+    .bannerTextAtStart {
+        left: 7.5rem;
     }
 
     html {
@@ -4215,6 +4281,10 @@ input[type=submit] {
     input[type=submit] {
         font-size: 4.3rem;
     }
+
+    .product_section ul {
+        padding: 0 20%;
+    }
 }
 
 
@@ -4222,6 +4292,12 @@ input[type=submit] {
 
     .welcometext {
         padding: 4rem 0rem;
+    }
+
+    .bannerTextAtEnd {
+        right: 5.5rem;
+        top: 6rem;
+        width: 75%;
     }
 
     .welcomesection {
